kube_work/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: onlineshop
spec:
  hosts:
    - "*"
  gateways:
  - onlineshop
  http:
  - match:
    - uri:
        prefix: /order
    route:
    - destination:
        host: order
        port:
          number: 8080
  - match:
    - uri:
        prefix: /delivery
    route:
    - destination:
        host: delivery
        port:
          number: 8080
